app/static/style.css
/* ... */
.activity__card {
    background: #FFF;
    padding: 1.5em 2em;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
    border-radius: 1.3em;
    margin-bottom: 1.2em;
}

.activity__card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 1em;
}

.activity__card-status {
    padding: 0.5em 1em;
    border-radius: 0.5em;
    font-weight: 700;
}

.activity__card-status-completed {
    background: var(--bg-completed);
    color: var(--completed-color);
}

.activity__card-status-notcompleted {
    background: var(--bg-notcompleted);
    color: var(--notcompleted-color);
}

.activity__card-content {
    margin-bottom: 1em;
}

.activity__card-data {
    margin-bottom: 0.5em;
}

.activity__card-data:last-child {
    margin-bottom: 0;
}

.activity__card-date,
.activity__card-status,
.activity__card-student-data, 
.activity__card-activity-data,
.activity__card-subject-data {
    font-weight: 700;
}

.activity__card-controls {
    display: flex;
    justify-content: center;
}

.activity__card-controls-btn {
    margin-right: 0.6em;
    flex-grow: 1;
}

.activity__card-controls-btn:last-child {
    margin-right: 0;
}

.activity__card-controls-icon {
    margin-right: 0.5em;
}

/* Initial add students & subjects form for new user */

#add-students-form, #add-subjects-form {
    margin-bottom: 40px;
}

#student-container input, #subject-container input {
    margin-bottom: 10px;
}


/* ====================
 ADD STUDENTS & SUBJECTS - add.html 
======================= */
.text-area {
    display: block;
}

.form-float {
    display: inline-flex;

}

.float-item {
    padding-right: 30px;
}

/* Log */
.activity-log-header {
    padding-top: 30px;
}

@media screen and (min-width: 676px) {
    .modal-dialog {
        max-width: 600px;
    }
}

/* ====================
 ATTENDANCE HISTORY - attend.html 
======================= */
.attendance-history {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 800px;
    margin: 0 auto;
    align-items: center;
}

.attendance-history__title, .attendance-history__form-title {
    text-align: center;
}

.attendance-history__form-title {
    font-family: 'Zilla Slab', serif;
}

.attendance-history__form-wrapper {
    margin: 2em auto;
    background: var(--attendance-bg);
    padding: 1.75em 1.5em;
    border-radius: 1.1em;
    width: 100%;
    max-width: 500px;
}

.attendance-history__form {
    margin-top: 1.5em;
}

.attendance__btn--history {
    display: block;
    margin: 0 auto;
    margin-top: 1.3em;
}

@media screen and (min-width: 968px) {
    .attendance-history__form-wrapper {
        max-width: 100%;
        padding: 1.2em 1.5em;
    }

    .attendance-history__form {
        display: flex;
        max-width: 70%;
        justify-content: center;
        align-items: flex-end;
        margin: 1.2em auto 0;
    }

    .attendance-history__field {
        margin-bottom: 0;
        margin-right: 1.5em;
        flex-grow: 1;
        width: 100%;
    }
}

/* ====================
 EDIT ACTIVITY, ADD ACTIVITY & ACTIVITY DETAILS - update.html, add.html, details.html
======================= */
.activity__btn-back {
    display: block;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.02em;
    margin-bottom: 3em;
}

.activity__title {
    margin-bottom: 0.6em;
}

.activity__field-input {
    position: relative;
}

.activity__field-select {
    padding-right: 2em;
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
}

.select-custom-dropdown {
    display: block;
    background: transparent;
    height: 100%;
    width: 2rem;
    position: absolute;
    top: 35%;
    right: 0.5em;
    pointer-events: none
}

.select-custom-dropdown:before {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    border-left: 0.7em solid transparent;
    border-right: 0.7em solid transparent;
    border-top: 0.7em solid #131313;
}

.btn--activity {
    background: var(--btn-bright);
    color: #FFF;
}

.btn--activity:hover, .btn--activity:focus {
    background: var(--btn-bright-hover);
    color: #FFF;
}

/* details.html */

.activity__content {
    margin-top: 2em;
}

.activity__content-group {
    margin-bottom: 1.2em;
}

.activity__content-label {
    font-size: 1.4rem;
}

.activity__content-data {
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
}

@media screen and (min-width: 650px) {
    .activity {
        max-width: 650px;
        margin: 0 auto;
    }

    .activity__form-float {
        display: flex;
    }

    .activity__float-field {
        margin-right: 1.5em;
        width: 100%;
    }

    .activity__float-field:last-child {
        margin-right: 0;
    }
}

/* ====================
 ACTIVITY LOG - log.html
======================= */
.activity--log {
    max-width: 1000px;

}

.activity-log__header {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.activity-log__table-wrapper {
    width: 100%;
    margin-top: 2em;
}

.activity-log__table-header-wrapper {
    display: none;
}

.activity-log__table-header {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 2fr;
    gap: 1em;
}


.activity-log__table-heading {
    font-size: 1.1rem;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
}

.activity-log__entry {
    font-size: 1.1rem;
    width: 100%;
    padding: 1em 0.5em;
    border-bottom: 2px solid var(--border-light);
    
}

.activity-log__entry:hover, .activity-log__entry:focus {
    background: var(--bg-cell-hover);
}

.activity-log__entry-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.activity-log__entry-data {
    font-weight: 700;
}

.activity-log__entry-label {
    font-weight: 400;
}
/* ... */

